fix canvas font on mobile devices

--- a/MemeGenerator.css
+++ b/MemeGenerator.css
@@ -19,6 +19,7 @@ textarea {
     width: 60%;
     display: block;
     margin: auto;
+    font-family: 'Impact';
 }
 
 .flex-container {
